[gd_scene load_steps=6 format=3 uid="uid://b63ghojxbceoi"]

[ext_resource type="Script" uid="uid://cc1v21co4datj" path="res://script/unihall.gd" id="1_jg44q"]
[ext_resource type="Texture2D" uid="uid://dxc8s3ahgs31o" path="res://Assets/background_images/bg uni hall.png" id="2_ffosf"]
[ext_resource type="Script" uid="uid://8ke54aqubejn" path="res://script/unihall-2dnode.gd" id="2_rd454"]
[ext_resource type="Texture2D" uid="uid://cxb0slo6vyoal" path="res://Assets/character_images/ellie look.png" id="3_rd454"]
[ext_resource type="AudioStream" uid="uid://8fevc30sgjr" path="res://Assets/audio/Noisy Classroom Sound Effect (Download Link).mp3" id="5_rd454"]

[node name="DialogicBackground" type="Node"]
script = ExtResource("1_jg44q")
metadata/_custom_type_script = "uid://blsjcvm6gvd78"

[node name="Node2D" type="Node2D" parent="."]
script = ExtResource("2_rd454")

[node name="BgUniHall" type="Sprite2D" parent="Node2D"]
position = Vector2(589.00006, 338.14288)
scale = Vector2(0.8779762, 0.87797624)
texture = ExtResource("2_ffosf")

[node name="EllieLook" type="Sprite2D" parent="Node2D/BgUniHall"]
position = Vector2(-219.32553, 121.650665)
scale = Vector2(0.3605849, 0.3605849)
texture = ExtResource("3_rd454")

[node name="TextureButton" type="TextureButton" parent="Node2D/BgUniHall/EllieLook"]
offset_left = -140.36511
offset_top = -524.18567
offset_right = 128.12524
offset_bottom = 502.39502
metadata/_edit_use_anchors_ = true

[node name="Button" type="Button" parent="."]
offset_left = 487.0
offset_top = 575.0
offset_right = 779.0
offset_bottom = 625.2889
text = "Leave the Science Hall"

[node name="class" type="TextureButton" parent="."]
offset_left = 600.0
offset_top = 312.0
offset_right = 652.0
offset_bottom = 462.18182

[node name="class2" type="TextureButton" parent="."]
offset_left = 523.0
offset_top = 309.0
offset_right = 575.0
offset_bottom = 459.18182

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_rd454")
autoplay = true
max_distance = 906.0
attenuation = 1.0717734
panning_strength = 1.85

[connection signal="pressed" from="Node2D/BgUniHall/EllieLook/TextureButton" to="Node2D" method="_on_texture_button_pressed"]
[connection signal="pressed" from="Button" to="Node2D" method="_on_button_pressed"]
[connection signal="pressed" from="class" to="." method="_on_class_pressed"]
[connection signal="pressed" from="class2" to="." method="_on_class_2_pressed"]
